[gd_scene load_steps=24 format=3 uid="uid://be8ceohv6ffst"]

[ext_resource type="Script" path="res://scripts/mainMenu.gd" id="1_p3mkq"]
[ext_resource type="Theme" uid="uid://8qfvurhug2dj" path="res://assets/textures/UI-themes/menu.tres" id="2_50dck"]
[ext_resource type="Texture2D" uid="uid://crgu07aqqfoui" path="res://assets/textures/splashscreens/City.png" id="3_gogsx"]
[ext_resource type="PackedScene" uid="uid://c4s5a2xw2aimj" path="res://scenes/volume.tscn" id="4_pds5r"]
[ext_resource type="Script" path="res://scripts/tooltipper.gd" id="8_3qai5"]
[ext_resource type="Theme" uid="uid://2o7qow54lkux" path="res://assets/textures/UI-themes/colour.tres" id="8_8sdor"]
[ext_resource type="PackedScene" uid="uid://pddgp7c634x5" path="res://scenes/modifyer.tscn" id="8_cmtqk"]
[ext_resource type="Texture2D" uid="uid://dnbebdqodexku" path="res://assets/textures/UI-elements/moon.png" id="9_f0q6u"]
[ext_resource type="Texture2D" uid="uid://de65gphcohtfw" path="res://assets/textures/button/buttonhex.png" id="9_soarv"]
[ext_resource type="StyleBox" uid="uid://d4hejc61s8x7e" path="res://assets/textures/UI-elements/styleBoxes/smolButtonBrass.tres" id="9_tqg4k"]
[ext_resource type="Texture2D" uid="uid://ui7sp51yhrfv" path="res://assets/textures/UI-elements/sun.png" id="10_2brgi"]
[ext_resource type="Texture2D" uid="uid://dw0qjpgna0abt" path="res://assets/textures/button/buttonhexColour.png" id="10_76px3"]
[ext_resource type="StyleBox" uid="uid://bs8bdldqu8nwo" path="res://assets/textures/UI-elements/styleBoxes/smolButton.tres" id="10_77w3h"]
[ext_resource type="Texture2D" uid="uid://o06fap6t0t8s" path="res://assets/textures/hex.png" id="10_fwxph"]
[ext_resource type="Texture2D" uid="uid://bnmeabab7bh70" path="res://assets/textures/Logo-agender.svg" id="11_6rgdl"]
[ext_resource type="ButtonGroup" uid="uid://dvfrb846jlrhr" path="res://assets/textures/UI-elements/buttonGroups/speedGroup.tres" id="13_l1v7u"]
[ext_resource type="AudioStream" uid="uid://3hrmx0speedw" path="res://assets/audio/music/Main Menu and Credits .mp3" id="13_sg5g6"]
[ext_resource type="AudioStream" uid="uid://bbkl8a8d15bkg" path="res://assets/audio/sfx/Button Sound Raphi Option.mp3" id="14_ahvhn"]
[ext_resource type="AudioStream" uid="uid://c6c14jdyc3x41" path="res://assets/audio/sfx/Knopf Version B.mp3" id="15_1wson"]
[ext_resource type="AudioStream" uid="uid://1g3f18lp2ci8" path="res://assets/audio/sfx/1 but higher.wav" id="16_qmjtj"]
[ext_resource type="AudioStream" uid="uid://doebfyaj76i3e" path="res://assets/audio/sfx/1.wav" id="17_7in6i"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2uwsx"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 2
stream_0/stream = ExtResource("14_ahvhn")
stream_0/weight = 66.0
stream_1/stream = ExtResource("15_1wson")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2tlx6"]
playback_mode = 1
random_pitch = 1.03
random_volume_offset_db = 2.0
streams_count = 2
stream_0/stream = ExtResource("16_qmjtj")
stream_0/weight = 20.149
stream_1/stream = ExtResource("17_7in6i")
stream_1/weight = 1.0

[node name="main" type="Node2D"]
script = ExtResource("1_p3mkq")

[node name="background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
theme = ExtResource("2_50dck")
texture = ExtResource("3_gogsx")
expand_mode = 2

[node name="edge" type="MarginContainer" parent="background"]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_50dck")

[node name="menu" type="HBoxContainer" parent="background/edge"]
layout_mode = 2
theme = ExtResource("2_50dck")

[node name="mainbuttons" type="VBoxContainer" parent="background/edge/menu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_50dck")

[node name="play" type="Button" parent="background/edge/menu/mainbuttons" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_50dck")
text = "btnPlay"
alignment = 0

[node name="buttonSpace" type="Container" parent="background/edge/menu/mainbuttons"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="settings" type="Button" parent="background/edge/menu/mainbuttons" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_50dck")
text = "btnSettings"
alignment = 0

[node name="achivements" type="Button" parent="background/edge/menu/mainbuttons" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttcs!"
disabled = true
text = "btnFeats"
alignment = 0

[node name="statistics" type="Button" parent="background/edge/menu/mainbuttons" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttcs!"
disabled = true
text = "btnStatistics"
alignment = 0

[node name="credits" type="Button" parent="background/edge/menu/mainbuttons" groups=["buttonClick"]]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_50dck")
text = "btnCredits"
alignment = 0

[node name="play" type="VBoxContainer" parent="background/edge/menu"]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_50dck")

[node name="playStory" type="Button" parent="background/edge/menu/play" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_50dck")
text = "btnPStory"
alignment = 0

[node name="playArcade" type="Button" parent="background/edge/menu/play" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_50dck")
text = "btnPArcade"
alignment = 0

[node name="playRogue" type="Button" parent="background/edge/menu/play" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttcs!"
mouse_filter = 1
theme = ExtResource("2_50dck")
disabled = true
text = "btnPRogue"
alignment = 0

[node name="back" type="Button" parent="background/edge/menu/play" groups=["buttonClick"]]
layout_mode = 2
size_flags_vertical = 10
text = "btnBack"
alignment = 0

[node name="title" type="HBoxContainer" parent="background/edge/menu"]
visible = false
layout_mode = 2

[node name="titleSpace" type="Container" parent="background/edge/menu/title"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="title" type="VBoxContainer" parent="background/edge/menu/title"]
layout_mode = 2
theme = ExtResource("2_50dck")

[node name="titleSpace" type="Container" parent="background/edge/menu/title/title"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="titleLable" type="Label" parent="background/edge/menu/title/title"]
layout_mode = 2
theme = ExtResource("2_50dck")
text = "Cypher 
   Sweeper"

[node name="settings" type="HBoxContainer" parent="background/edge/menu"]
visible = false
layout_mode = 2

[node name="settingsSpace" type="Container" parent="background/edge/menu/settings"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="volume" parent="background/edge/menu/settings" instance=ExtResource("4_pds5r")]
layout_mode = 2

[node name="settings" type="VBoxContainer" parent="background/edge/menu/settings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="language" type="HBoxContainer" parent="background/edge/menu/settings/settings"]
layout_mode = 2
theme = ExtResource("2_50dck")

[node name="languageSpace" type="Container" parent="background/edge/menu/settings/settings/language"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="languageLabel" type="Label" parent="background/edge/menu/settings/settings/language"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 36
text = "lbLang"

[node name="languageSelector" type="OptionButton" parent="background/edge/menu/settings/settings/language" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = ExtResource("9_tqg4k")
theme_override_styles/normal = ExtResource("10_77w3h")
theme_override_styles/hover = ExtResource("9_tqg4k")
theme_override_styles/pressed = ExtResource("9_tqg4k")
item_count = 5
selected = 0
popup/item_0/text = "btnEN"
popup/item_0/id = 0
popup/item_1/text = "btnENGB"
popup/item_1/id = 1
popup/item_2/text = "btnDE"
popup/item_2/id = 2
popup/item_3/text = "btnFR"
popup/item_3/id = 4
popup/item_4/text = "btnEO"
popup/item_4/id = 5

[node name="speed" type="HBoxContainer" parent="background/edge/menu/settings/settings"]
layout_mode = 2
size_flags_vertical = 2

[node name="speedSpace" type="Container" parent="background/edge/menu/settings/settings/speed"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="speedModes" type="VBoxContainer" parent="background/edge/menu/settings/settings/speed"]
layout_mode = 2

[node name="zippy" type="HSplitContainer" parent="background/edge/menu/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="zippyMode" type="CheckBox" parent="background/edge/menu/settings/settings/speed/speedModes/zippy" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
button_group = ExtResource("13_l1v7u")

[node name="zippy" type="Label" parent="background/edge/menu/settings/settings/speed/speedModes/zippy"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnZippy"

[node name="fast" type="HSplitContainer" parent="background/edge/menu/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="fastMode" type="CheckBox" parent="background/edge/menu/settings/settings/speed/speedModes/fast" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
button_group = ExtResource("13_l1v7u")

[node name="fast" type="Label" parent="background/edge/menu/settings/settings/speed/speedModes/fast"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnFast"

[node name="normal" type="HSplitContainer" parent="background/edge/menu/settings/settings/speed/speedModes"]
layout_mode = 2
dragger_visibility = 1

[node name="normalMode" type="CheckBox" parent="background/edge/menu/settings/settings/speed/speedModes/normal" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
button_pressed = true
button_group = ExtResource("13_l1v7u")

[node name="normal" type="Label" parent="background/edge/menu/settings/settings/speed/speedModes/normal"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 21
text = "btnNormal"

[node name="speedMode" type="Label" parent="background/edge/menu/settings/settings/speed"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/line_spacing = -20
theme_override_font_sizes/font_size = 42
text = "lbSMode"
horizontal_alignment = 1
autowrap_mode = 2

[node name="colour" type="HBoxContainer" parent="background/edge/menu/settings/settings"]
layout_mode = 2
theme = ExtResource("8_8sdor")
theme_override_constants/separation = 15

[node name="presets" type="VBoxContainer" parent="background/edge/menu/settings/settings/colour"]
layout_mode = 2

[node name="preset" type="Label" parent="background/edge/menu/settings/settings/colour/presets"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "lbPre"
horizontal_alignment = 1

[node name="presets" type="HBoxContainer" parent="background/edge/menu/settings/settings/colour/presets"]
layout_mode = 2

[node name="dark" type="TextureButton" parent="background/edge/menu/settings/settings/colour/presets/presets" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("9_f0q6u")

[node name="light" type="TextureButton" parent="background/edge/menu/settings/settings/colour/presets/presets" groups=["buttonClick"]]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("10_2brgi")

[node name="background" type="VBoxContainer" parent="background/edge/menu/settings/settings/colour"]
layout_mode = 2
size_flags_horizontal = 10

[node name="bgImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/background"]
layout_mode = 2
texture = ExtResource("10_76px3")
stretch_mode = 3

[node name="background" type="ColorPickerButton" parent="background/edge/menu/settings/settings/colour/background" groups=["buttonClick", "colourPick"]]
custom_minimum_size = Vector2(72, 46)
layout_mode = 2
mouse_filter = 1
edit_alpha = false

[node name="shadow" type="VBoxContainer" parent="background/edge/menu/settings/settings/colour"]
layout_mode = 2

[node name="sample" type="Control" parent="background/edge/menu/settings/settings/colour/shadow"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="bgImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/shadow/sample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_76px3")
stretch_mode = 3

[node name="shaImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/shadow/sample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_soarv")
stretch_mode = 3
flip_h = true

[node name="shadow" type="ColorPickerButton" parent="background/edge/menu/settings/settings/colour/shadow" groups=["buttonClick", "colourPick"]]
custom_minimum_size = Vector2(72, 46)
layout_mode = 2
mouse_filter = 1
edit_alpha = false

[node name="grid" type="VBoxContainer" parent="background/edge/menu/settings/settings/colour"]
layout_mode = 2

[node name="sample" type="Control" parent="background/edge/menu/settings/settings/colour/grid"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="gridImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/grid/sample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_fwxph")
stretch_mode = 3

[node name="bgImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/grid/sample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_76px3")
stretch_mode = 3

[node name="shaImg" type="TextureRect" parent="background/edge/menu/settings/settings/colour/grid/sample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_soarv")
stretch_mode = 3
flip_h = true

[node name="grid" type="ColorPickerButton" parent="background/edge/menu/settings/settings/colour/grid" groups=["buttonClick", "colourPick"]]
custom_minimum_size = Vector2(72, 46)
layout_mode = 2
mouse_filter = 1
edit_alpha = false

[node name="arcade" type="HBoxContainer" parent="background/edge/menu"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="arcadeSpace" type="Container" parent="background/edge/menu/arcade"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="arcade" type="VBoxContainer" parent="background/edge/menu/arcade"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sizeandplay" type="HBoxContainer" parent="background/edge/menu/arcade/arcade"]
layout_mode = 2

[node name="label" type="Label" parent="background/edge/menu/arcade/arcade/sizeandplay"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 42
text = "selSize"

[node name="playSpace1" type="Container" parent="background/edge/menu/arcade/arcade/sizeandplay"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="sizeSelector" type="SpinBox" parent="background/edge/menu/arcade/arcade/sizeandplay" groups=["buttonHover"]]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "ttselSize"
mouse_filter = 1
min_value = 5.0
max_value = 21.0
value = 13.0
alignment = 1
script = ExtResource("8_3qai5")

[node name="playSpace2" type="Container" parent="background/edge/menu/arcade/arcade/sizeandplay"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="play" type="Button" parent="background/edge/menu/arcade/arcade/sizeandplay" groups=["buttonClick"]]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "btnPlay"

[node name="playSpace3" type="Container" parent="background/edge/menu/arcade/arcade/sizeandplay"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Container" type="Container" parent="background/edge/menu/arcade/arcade"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="modContainer" parent="background/edge/menu/arcade/arcade" instance=ExtResource("8_cmtqk")]
layout_mode = 2

[node name="seedContainer" type="HBoxContainer" parent="background/edge/menu/arcade/arcade"]
layout_mode = 2
size_flags_vertical = 10

[node name="container" type="Container" parent="background/edge/menu/arcade/arcade/seedContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="seedInput" type="LineEdit" parent="background/edge/menu/arcade/arcade/seedContainer"]
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
placeholder_text = "Seed"
max_length = 8

[node name="container2" type="Container" parent="background/edge/menu/arcade/arcade/seedContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="lbMult" type="Label" parent="background/edge/menu/arcade/arcade/seedContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 24
text = "Score Modifyer: "

[node name="credits" type="HBoxContainer" parent="background/edge/menu"]
visible = false
layout_mode = 2

[node name="creditsSpace" type="Container" parent="background/edge/menu/credits"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="credits" type="VBoxContainer" parent="background/edge/menu/credits"]
layout_mode = 2

[node name="artemis" type="Label" parent="background/edge/menu/credits/credits"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Artemis D. Mattle"

[node name="Sprite2D" type="Sprite2D" parent="background/edge/menu/credits/credits/artemis"]
position = Vector2(665, 51)
rotation = -0.144862
scale = Vector2(3, 3)
texture = ExtResource("10_fwxph")

[node name="Sprite2D" type="Sprite2D" parent="background/edge/menu/credits/credits/artemis/Sprite2D"]
clip_children = 1
texture = ExtResource("10_76px3")

[node name="Sprite2D" type="Sprite2D" parent="background/edge/menu/credits/credits/artemis/Sprite2D/Sprite2D"]
position = Vector2(0.079511, -0.323711)
rotation = 0.144862
scale = Vector2(0.06, 0.06)
texture = ExtResource("11_6rgdl")

[node name="bluefoxx" type="Label" parent="background/edge/menu/credits/credits"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Bluefoxx"

[node name="philipp" type="Label" parent="background/edge/menu/credits/credits"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Philipp Maschayechi"

[node name="raphael" type="Label" parent="background/edge/menu/credits/credits"]
layout_mode = 2
theme_override_constants/line_spacing = -55
theme_override_font_sizes/font_size = 50
text = "Raphael 
   Schwaigerlehner"

[node name="levelSelect" type="GridContainer" parent="background/edge/menu"]
visible = false
layout_mode = 2
theme_override_constants/v_separation = -220
columns = 3

[node name="lvl1Container" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl1" type="Button" parent="background/edge/menu/levelSelect/lvl1Container"]
layout_mode = 2
text = "Level 1"

[node name="lvl1Container2" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl2" type="Button" parent="background/edge/menu/levelSelect/lvl1Container2"]
layout_mode = 2
text = "Level 2"

[node name="lvl1Container3" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl3" type="Button" parent="background/edge/menu/levelSelect/lvl1Container3"]
layout_mode = 2
text = "Level 3"

[node name="lvl1Container4" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl4" type="Button" parent="background/edge/menu/levelSelect/lvl1Container4"]
layout_mode = 2
text = "Level 4"

[node name="lvl1Container5" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl5" type="Button" parent="background/edge/menu/levelSelect/lvl1Container5"]
layout_mode = 2
text = "Level 5"

[node name="lvl1Container6" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl6" type="Button" parent="background/edge/menu/levelSelect/lvl1Container6"]
layout_mode = 2
text = "Level 6"

[node name="lvl1Container7" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl7" type="Button" parent="background/edge/menu/levelSelect/lvl1Container7"]
layout_mode = 2
text = "Level 7"

[node name="lvl1Container8" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl8" type="Button" parent="background/edge/menu/levelSelect/lvl1Container8"]
layout_mode = 2
text = "Level 8"

[node name="lvl1Container9" type="MarginContainer" parent="background/edge/menu/levelSelect"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 150

[node name="lvl9" type="Button" parent="background/edge/menu/levelSelect/lvl1Container9"]
layout_mode = 2
text = "Level 9"

[node name="story" type="VBoxContainer" parent="background/edge/menu"]
layout_mode = 2
size_flags_horizontal = 10

[node name="continue" type="Button" parent="background/edge/menu/story" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttcs!"
disabled = true
text = "btnContinue"

[node name="tutorials" type="Button" parent="background/edge/menu/story" groups=["buttonClick"]]
layout_mode = 2
text = "btnTutorial"

[node name="saves" type="Button" parent="background/edge/menu/story" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttcs!"
disabled = true
text = "btnSaves"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_sg5g6")
volume_db = -12.0
autoplay = true
bus = &"music"

[node name="clickSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2uwsx")
max_polyphony = 5
bus = &"sfx"

[node name="hoverSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2tlx6")
pitch_scale = 10.0
bus = &"sfx"

[connection signal="pressed" from="background/edge/menu/mainbuttons/play" to="." method="_toPlay"]
[connection signal="pressed" from="background/edge/menu/mainbuttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="background/edge/menu/mainbuttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="background/edge/menu/play/playStory" to="." method="_on_play_story_pressed"]
[connection signal="pressed" from="background/edge/menu/play/playArcade" to="." method="_on_play_arcade_pressed"]
[connection signal="pressed" from="background/edge/menu/play/back" to="." method="_toMain"]
[connection signal="item_selected" from="background/edge/menu/settings/settings/language/languageSelector" to="." method="_on_language_selected"]
[connection signal="pressed" from="background/edge/menu/settings/settings/speed/speedModes/zippy/zippyMode" to="." method="_on_zippy_mode_pressed"]
[connection signal="pressed" from="background/edge/menu/settings/settings/speed/speedModes/fast/fastMode" to="." method="_on_fast_mode_pressed"]
[connection signal="pressed" from="background/edge/menu/settings/settings/speed/speedModes/normal/normalMode" to="." method="_on_normal_mode_pressed"]
[connection signal="pressed" from="background/edge/menu/settings/settings/colour/presets/presets/dark" to="." method="shapeshift" binds= [Color(0.207843, 0.168627, 0.239216, 1), Color(0.286275, 0.286275, 0.286275, 1), Color(0.333333, 0, 0.145098, 1), true]]
[connection signal="pressed" from="background/edge/menu/settings/settings/colour/presets/presets/light" to="." method="shapeshift" binds= [Color(0.835294, 0.678431, 0.427451, 1), Color(0, 0, 0, 1), Color(0.694118, 0.45098, 0.717647, 1), false]]
[connection signal="pressed" from="background/edge/menu/arcade/arcade/sizeandplay/play" to="." method="_on_arcade_pressed"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container/lvl1" to="." method="_lvl1"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container2/lvl2" to="." method="_lvl2"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container3/lvl3" to="." method="_lvl3"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container4/lvl4" to="." method="_lvl4"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container5/lvl5" to="." method="_lvl5"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container6/lvl6" to="." method="_lvl6"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container7/lvl7" to="." method="_lvl7"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container8/lvl8" to="." method="_lvl8"]
[connection signal="pressed" from="background/edge/menu/levelSelect/lvl1Container9/lvl9" to="." method="_lvl9"]
[connection signal="pressed" from="background/edge/menu/story/tutorials" to="." method="_on_tutorials_pressed"]
